<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo_orientaapp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/button_background"
        android:text="@string/home_button"
        android:textColor="@color/button_text"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnSchool"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/button_background"
        android:text="@string/school_button"
        android:textColor="@color/button_text"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnPark"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/button_background"
        android:text="@string/park_button"
        android:textColor="@color/button_text"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@color/button_background"
        android:text="@string/help_button"
        android:textColor="@color/button_text"
        android:textSize="52sp" />

    <Button
        android:id="@+id/btnConfigHelp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@color/button_background"
        android:text="@string/config_help_button"
        android:textColor="@color/button_text"
        android:textSize="32sp" />

</LinearLayout>
