<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@color/black">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo_orientaapp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_help"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etHelpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/help_name"
        android:textColor="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etHelpPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/help_phone"
        android:textColor="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:textSize="20sp"
        android:inputType="phone"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnSaveHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/button_text"
        android:background="@color/button_background"
        android:textSize="30sp" />
</LinearLayout>
