<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".ArrivalActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo_orientaapp" />

    <TextView
        android:id="@+id/tvArrivedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/arrived_at"
        android:textColor="@color/yellow"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/button_background"
        android:text="@string/returning_home"
        android:textColor="@color/button_text"
        android:textSize="36sp" />
</LinearLayout>
